# climateservAccess

./: LICENSE  README.md  get_CSV_Batch.csv  pyproject.toml  setup.py
climateservaccess/: __init__.py  climateservaccess.py  climateservaccess_test.ipynb
climateservaccess.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: climateservAccessExample.ipynb  climateservaccess_test.ipynb  example_code.py  get_CSV_Test.csv  interval_type_ref.csv  requirements.txt
