[project]
name = "climateservaccess"
version = "0.0.4"
authors = [
  { name="Adam Zheng", email="adzheng@tamu.edu" },
]
description = "A custom library for accessing the ClimateSERV API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/adamzhen/climateservAccess"
Issues = "https://github.com/adamzhen/climateservAccess/issues"